# rsp_hololen_pnp_main

./: .gitignore  README.md  index.rst  main.repos  package.xml  rsp_hololens_pnp_main.repos
include/main/: gripper_pub.hpp  hololens_sub.hpp
json/: reg_cfg.json
src/: gripper_pub.cpp  main_node.cpp
src/dummy_hololens/: CMakeLists.txt  package.xml
src/dummy_hololens/src/: pick_pub.cpp  place_pub.cpp  reg_pub.cpp
src/main/: CMakeLists.txt  README.md
src/main/launch/: main.launch.xml  main_sim.launch.xml
src/main/src/: hololens_sub.cpp
