<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yhdeng.ryan@gmail.com">ryan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ur5_interface</depend>
  <depend>moveit_ur5_msgs</depend>
  <depend>pnp_actionlib</depend>
  <depend>pnp_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libjsoncpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>registration_service</depend>
  <depend>registration_msgs</depend>
  <depend>robotiq_2f_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>